test/visibility/import/rename/renameToAlreadyImported.good
renameToAlreadyImported.chpl:5: In module 'User':
renameToAlreadyImported.chpl:6: error: 'x' is multiply defined
